--- a/pro/src/app/App/layouts/logged-out/LoggedOutLayout/LoggedOutLayout.module.scss
+++ b/pro/src/app/App/layouts/logged-out/LoggedOutLayout/LoggedOutLayout.module.scss
@@ -61,10 +61,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-
-  @media screen and (min-width: size.$tablet) {
-    padding: size.$main-content-padding size.$main-content-padding 0;
-  }
 }
 
 .content {
